  - Uniformly use limits.h. Andrew McNamar and myself. 
    See http://www.opengroup.org/onlinepubs/007908799/headix.html.
  - Don't print ident when making inital log to stdout.
  - If logs are being sent to stdout, stderr or a file handle,
    then after parsing of the config is complete add a ident
    (existing behaviour) and timestamp. If the log fails then
    send it to stderr.

----------------------------------------------------------------------

19th December 2003
(Horms)
  * 1.13
  - Fixed some typographical errors in the documentation. Simon Matter

----------------------------------------------------------------------

18th December 2003
(Horms)
  * 1.13beta1
  - Added sys/limits.h for ULONG_MAX on FreeBSD. Clement Laforet
  - Fixed bug in callback functions for user_server_port_t
    structure. This caused perdition to segmentation fault when
    the outgoing_server option was used. Thanks to Simon Matter
    for discovering this.
  - Fixed bug where user-supplied username was used for db lookup
    rather than the key derived from the query_string option
    if it is supplied. Roland Rosenfeld
  - Added missing documentation. paricularly for pid_file
    and ssl_ca_* options
  - Changed ssl_chain_file option to ssl_ca_chain_file
  - Fixed bug where debian module packages stopped perdition
    rather than restarting it. Roland Rosenfeld

----------------------------------------------------------------------

15th December 2003
(Horms)
   * 1.12
   - Debian and Red Hat package's init script will run perdition by default
     (previously /etc/default/perdition / /etc/sysconfig/perdition needed 
      to be edited to enable perdition)
   - Updated init information in man page
   - Fixed configure.in so --disable-ssl should actually work
   - Tidied up naming of logging macros
   - Fixed output of makebdb -u
   - makebdb recreated database rather than adding to it
   - bdb module no longer appends a spurious "\0" to keys