@@ -193,12 +193,15 @@
 #O You are so in
 #ok_line blah blah blah
 
+# server_ok_line:
+# This option is depricated and now has the same effect aso|server_resp_line
+# It may be removed in a future release
 
-# o|server_ok_line:
+# o|server_resp_line:
 # If authentication with the back-end server is successful then send the
 # servers +OK line to the client, instead of generting one.
 #o
-#server_ok_line
+#server_resp_line
 
 # P|protocol PROTOCOL:
 # Protocol to use 
